--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
-.container::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-  background-color: #f5f5f5;
+.board-container {
+  overflow-x: auto;
+  overflow-y: hidden;
+  margin: 0;
+  display: flex;
+  justify-content: center;
 }
